<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModelNutrition"
            type="com.task.nutrition.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/nutrition_facts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nutrition_facts_textview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.117" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/first_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/nutrition_facts"
            app:layout_constraintVertical_bias="0.506">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories_textview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/fat_textview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/cholesterol_textview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/Sodium_textview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/carbohydrate_textview" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/protein_textview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/vitamin_textview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/calcium_textview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/iron_textview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/potassium_textview" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.907"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/nutrition_facts"
            app:layout_constraintVertical_bias="0.506">

            <TextView
                android:id="@+id/calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{Integer.toString(viewModelNutrition.nutritionLiveData.peekContent().data.calories)}" />


            <TextView
                android:id="@+id/fats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@{Double.toString(viewModelNutrition.nutritionLiveData.peekContent().data.totalDaily.FAT.quantity)+viewModelNutrition.nutritionLiveData.peekContent().data.totalDaily.FAT.unit}" />

            <TextView
                android:id="@+id/cholesterol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@{Double.toString(viewModelNutrition.nutritionLiveData.peekContent().data.totalDaily.CHOLE.quantity)+viewModelNutrition.nutritionLiveData.peekContent().data.totalDaily.CHOLE.unit}" />

            <TextView
                android:id="@+id/sodium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@{Double.toString(viewModelNutrition.nutritionLiveData.peekContent().data.totalDaily.NA.quantity)+viewModelNutrition.nutritionLiveData.peekContent().data.totalDaily.NA.unit}" />

            <TextView
                android:id="@+id/carbohydrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@{Double.toString(viewModelNutrition.nutritionLiveData.peekContent().data.totalDaily.CHOCDF.quantity)+viewModelNutrition.nutritionLiveData.peekContent().data.totalDaily.CHOCDF.unit}" />


            <TextView
                android:id="@+id/protein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@{Double.toString(viewModelNutrition.nutritionLiveData.peekContent().data.totalDaily.PROCNT.quantity)+viewModelNutrition.nutritionLiveData.peekContent().data.totalDaily.PROCNT.unit}" />

            <TextView
                android:id="@+id/vitamin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@{Double.toString(viewModelNutrition.nutritionLiveData.peekContent().data.totalDaily.VITC.quantity)+viewModelNutrition.nutritionLiveData.peekContent().data.totalDaily.VITC.unit}" />

            <TextView
                android:id="@+id/calcium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@{Double.toString(viewModelNutrition.nutritionLiveData.peekContent().data.totalDaily.CA.quantity)+viewModelNutrition.nutritionLiveData.peekContent().data.totalDaily.CA.unit}" />

            <TextView
                android:id="@+id/iron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@{Double.toString(viewModelNutrition.nutritionLiveData.peekContent().data.totalDaily.FE.quantity)+viewModelNutrition.nutritionLiveData.peekContent().data.totalDaily.FE.unit}" />

            <TextView
                android:id="@+id/potassium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@{Double.toString(viewModelNutrition.nutritionLiveData.peekContent().data.totalDaily.k.quantity)+viewModelNutrition.nutritionLiveData.peekContent().data.totalDaily.k.unit}" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>